2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* folio.h (struct folio): Correctly calculate the size of
	the wait_queues_p array.
	(folio_object_wait_queue_p): Test the correct bit.
	(folio_object_wait_queue_p_set): Set the correct bit.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* activity.h (RM_activity_stats): New definition.
	(ACTIVITY_STATS_PERIODS): Change to 2.
	(struct activity_stats_buffer): New structure.
	(activity_stats): New RPC.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* cap.h (CAP_POLICY_GET): New define.
	(CAP_POLICY_SET): Likewise.
	(CAP_PROPERTIES_GET): Change implementation to use the above
	macros.
	(CAP_PROPERTIES_SET): Likewise.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* stddef.h (debug): Change program_name's type to char *.
	* t-addr-trans.c (program_name): Change type to char *.
	* t-addr.c (program_name): Likewise.
	* t-rpc.c (program_name): Likewise.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* cap.h (cap_type_strengthen): New function.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* folio.h (folio_t): New definition.
	* thread.h (thread_t): Likewise.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* thread.h (thread_start): New function.

2008-02-08  Thomas Schwinge  <tschwinge@gnu.org>

	* futex.h (__need_timespec): Define before including <time.h>.

2008-02-06  Neal H. Walfield  <neal@gnu.org>

	* folio.h (folio_object_cap): Remove reference to field weak_p.

2008-02-06  Neal H. Walfield  <neal@gnu.org>

	* folio.h (folio_object_cap): New function.

2008-02-05  Neal H. Walfield  <neal@gnu.org>

	* folio.h (struct folio) [RM_INTERN]: Remove field dhazard,
	mhazard.  Add field checksums.  Rearrange data structure.
	(folio_object_type): New function.
	(folio_object_type_set): Likewise.
	(folio_object_policy): Likewise.
	(folio_object_policy_set): Likewise.
	[RM_INTERN]: Include <bit-array.h>.
	(folio_object_wait_queue_p) [RM_INTERN]:New function.
	(folio_object_wait_queue_p_set) [RM_INTERN]:Likewise.