@@ -1,5 +1,11 @@
 2008-02-15  Neal H. Walfield  <neal@gnu.org>
 
+	* folio.h (struct folio): Add field discarded.
+	(folio_object_discarded): New function.
+	(folio_object_discarded_set): Likewise.
+
+2008-02-15  Neal H. Walfield  <neal@gnu.org>
+
 	* folio.h (struct folio): Correctly calculate the size of
 	the wait_queues_p array.
 	(folio_object_wait_queue_p): Test the correct bit.
